# youtube-analytics-lakehouse-databricks

./: .bundle_schema.json  .env.example  .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dev-deploy.yml  prod-release.yml
bundles/: bundle.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/: gold_channel_daily_summary.sql  gold_video_country_daily_summary.sql  gold_video_daily_summary.sql  gold_video_device_daily_summary.sql  gold_video_traffic_source_daily_summary.sql  placeholder.sql  schema.yml
dbt/tests/: test_gold_channel_daily_summary_unique.sql  test_gold_freshness_recency.sql  test_gold_metrics_non_negative.sql  test_gold_video_country_daily_summary_unique.sql  test_gold_video_daily_summary_unique.sql  test_gold_video_device_daily_summary_unique.sql  test_gold_video_traffic_source_daily_summary_unique.sql  warn_new_traffic_source_ids.sql
ingestion/tasks/: dbt_run_gold.py  dbt_test.py  finalize_run_log.py  ingest_analytics_api_to_bronze.py  ingest_data_api_to_bronze.py  init_run_context.py  optimize_tables.py
job_tasks/gold/: dbt_run_gold.py  dbt_test.py
job_tasks/ops/: finalize_run_log.py
lakeflow/: bootstrap_unity_catalog.request.json  bootstrap_unity_catalog.sql  bronze_to_silver_pipeline.sql  country_reference.sql
scripts/: bootstrap_unity_catalog.ps1  bootstrap_youtube_secrets.py  get_youtube_refresh_token.py  post_deploy_smoke_checks.py  unity_catalog_setup.py
tests/: test_ingest_analytics_window.py
