[project]
name = "youtube-analytics-lakehouse"
version = "0.1.0"
description = "YouTube Analytics Lakehouse on Databricks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "databricks-sdk>=0.62.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.0",
  "dbt-databricks>=1.9.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
]

[tool.uv]
package = false
